Updated amendments to reflect GB discussion on Dec 13

--- a/bylaws_v1.78910.tex
+++ b/bylaws_v1.78910.tex
@@ -108,7 +108,7 @@ This document outlines the Collaboration governance and organization of scientif
 
 \item Towards this end, the Collaboration should provide appropriate credit to data analysts and builders of hardware and/or software; provide leadership opportunities and other opportunities to promote career advancement; motivate people to work together towards common goals; and provide a healthy collaboration culture that establishes standards for behavior consistent with high ethical standards.
 
-\item \textcolor{magenta}{All members will be expected to abide by the \collabname\ Code of Conduct.}
+\item \textcolor{magenta}{All members will be expected to abide by the \collabname\ Code of Conduct.} \textbf{Comment: This is going to be included in the bylwas as soon as the CoC is in place}
 
 \end{itemize}
 
@@ -126,7 +126,7 @@ The governance structure of the \collabname\ Collaboration is illustrated in Fig
 \begin{center}
 \includegraphics[width=6.5in]{cmbs4_org_v11.pdf}
 \end{center}
-\caption{\collabname\ Collaboration Organizational Chart. \textcolor{green}{EDI is currently an ad hoc committee convened by the Spokespeople.}}
+\caption{\collabname\ Collaboration Organizational Chart. \textcolor{magenta}{EDI to be added to the chart.}}
 \label{fig:org_chart}
 \end{figure}
 
@@ -201,14 +201,14 @@ Spokesperson responsibilities include, but are not limited to, the following:
 \item Carrying out other duties as charged to them by the GB. 
 \end{itemize}
 
-Spokespersons are elected to two-year terms. The election process is detailed in \S\ref{sec:elections}. \textcolor{magenta}{Remove the following paragraph since outdated?} To facilitate interactions of the Collaboration with the agencies and national laboratories, term limits will not be required prior to the establishment of the Project.  Two-term limits are expected to be imposed by the GB amendment of the Bylaws after the \collabname\ Construction Project is firmly established with the Project leadership team in place.
+Spokespersons are elected to two-year terms \textcolor{magenta}{and are limited to two consecutive terms}. The election process is detailed in \S\ref{sec:elections}. \textcolor{magenta}{\sout{To facilitate interactions of the Collaboration with the agencies and national laboratories, term limits will not be required prior to the establishment of the Project.  Two-term limits are expected to be imposed by the GB amendment of the Bylaws after the \collabname\ Construction Project is firmly established with the Project leadership team in place.}}
 
 \section{\exec}
 \label{sec:exec}
 
 \subsection{Scope}
 
-The \exec \ (\shorte) is an elected and appointed board led by the Spokespersons. It consists of up to {\textcolor{red}{8} members: the Spokespersons, the co-Chairs of the Science Council, \sout{{\textcolor{red}{the two co-Chairs of the Technical Council,}}} the Chair of the Membership Committee, the Chair of the Publication and Speakers Committee, and up to two members appointed by the Spokespersons. The ET is the agile decision-making body in the Collaboration with the ability to address the day-to-day collaboration issues.  The \shorte\ is structured to facilitate the flow of information to the Spokespersons from the Collaboration and vice versa, as well as to provide a sounding board for the Spokespersons.
+The \exec \ (\shorte) is an elected and appointed board led by the Spokespersons. It consists of up to {\textcolor{red}{10} members: the Spokespersons, the co-Chairs of the Science Council, \sout{{\textcolor{red}{the two co-Chairs of the Technical Council,}}} the Chair of the Membership Committee, the Chair of the Publication and Speakers Committee, \textcolor{magenta}{the two co-Chairs of the Education, Diversity and Inclusion Committee} and up to two members appointed by the Spokespersons. The ET is the agile decision-making body in the Collaboration with the ability to address the day-to-day collaboration issues.  The \shorte\ is structured to facilitate the flow of information to the Spokespersons from the Collaboration and vice versa, as well as to provide a sounding board for the Spokespersons.
 
 The \exec \ has three main roles:
 \begin{itemize}
@@ -226,7 +226,7 @@ Each meeting requires a quorum to conduct official \shorte\ business.  It is the
 
 All elected positions \sout{\textcolor{magenta}{of the major bodies}} in the CMB S4 Collaboration serve two-year terms (with the exception of the Postdoctoral member on the GB, who serves a one-year term). Most positions have term limits.  Elections for GB members are  arranged so that $\sim 50\%$ of the members will be up for election each year. New appointments take office on July 1 in the year of their election.  
 
-As there are restrictions on the overlap of elected officials between various governing bodies, elections are timed to provide Collaboration members multiple opportunities to participate in Collaboration governance. In a given election year the ordering proceeds as follows: elections are held first for the Spokespersons, as needed. Next, elections are held for the Science Council co-Chairs, Membership Committee Chair and the Publication and Speakers Committee Chair, as needed.  A third election is held to fill available positions for the Governing Board. Elections for positions outside the top levels of major bodies occur when required as such officials are not prohibited from serving other elected roles. 
+As there are restrictions on the overlap of elected officials between various governing bodies, elections are timed to provide Collaboration members multiple opportunities to participate in Collaboration governance. In a given election year the ordering proceeds as follows: elections are held first for the Spokespersons, as needed. Next, elections are held for the Science Council co-Chairs, Membership Committee Chair and the Publication and Speakers Committee Chair, as needed.  A third election is held to fill available positions for the Governing Board. Elections for positions outside the top levels \sout{\textcolor{magenta}{of major bodies}} occur when required as such officials are not prohibited from serving other elected roles. 
 
 Each candidate provides a Candidate Statement to the EVC, which makes them available to the Collaboration via the \collabname\  internal web page prior to the balloting. Votes are cast anonymously online by Voting members, with the elections managed by the EVC, and timed to permit adequate time to evaluate the slates of nominees for each election and still assure the new appointments are able to take office on July 1.  The EVC, in consultation with the GB,  determines the detailed timing of the balloting and determines procedures for dealing with any election situations not anticipated in the Bylaws.
 
@@ -263,7 +263,7 @@ If a GB member, including a Postdoctoral member, resigns or is removed outside o
 
 \subsection{All Other Elected Positions}
 
-For other elected Collaboration roles, the EVC is charged with establishing election rules and conducting these elections. Note that the EVC cannot make voting requirements more restrictive than those for the main body elections. Terms of elected positions are limited to durations of at most two years. 
+For other elected Collaboration roles, the EVC is charged with establishing election rules and conducting these elections. Note that the EVC cannot make voting requirements more restrictive than those for the \textcolor{magenta}{\sout{main body} ET (including Spokespersons and Council and Committee chairs) and GB} elections. Terms of elected positions are limited to durations of at most two years. 
 
 \section{Councils and Committees}
 \label{sec:councils}
@@ -316,6 +316,11 @@ The committee drafts the necessary documents for external collaboration agreemen
 The Education and Public Outreach (EPO) Committee is responsible for initiating, overseeing, and recording the Collaboration's efforts in the areas of public outreach and education. Its mission is to disseminate Collaboration results to the public and increase general scientific literacy. The committee is overseen by the \exec \ and members are appointed by the Spokespersons after solicitation of nominations from the full Collaboration and after consultation with the \shorte.
 
 The Chair is appointed by the Spokespersons after consultation with the \shorte\  \textcolor{magenta} {and is limited to two consecutive terms with one year off required before standing again.} \textcolor{magenta}{Terms on the EPO Committee are for two years \sout{, with some initial three-year terms to allow staggered appointments}. Consecutive terms are allowed.}  A presentation of EPO efforts and written documentation of activities must be provided to the \shorte\ at each Collaboration meeting or when requested by the \shorte.   
+
+\subsection{\textcolor{magenta}{Equity, Diversity, and Inclusion Committee}}
+\textcolor{magenta}{The Equity, Diversity, and Inclusion (EDI) Committee is responsible for initiating, guiding, and documenting the collaboration's efforts and coordinating with the project to create and uphold a safe, welcoming, and open community. Activities include but are not limited to advocating for policies that promote justice, equity, diversity and inclusion; assessing the collaboration climate to inform recommendations and track progress; empowering collaboration members to remove barriers and contribute to an inclusive and welcoming community; and researching and exploring best practices for equitable organizations.}
+
+\textcolor{magenta}{The committee has two Co-chairs that share equal responsibilities and are appointed by the Spokespersons after consultation with the ET and the GB. Chair term appointments are staggered to maintain continuity. Chair terms are for two years (with one initial three-year term to allow staggered appointments) and are limited to two consecutive terms with one year off required before standing again. The chairs of the EDI committee sit on the ET. Membership on the committee is open to anyone in the collaboration at any stage in their career. Collaboration members are welcome to join the EDI committee by joining meetings and the mailing list at any time. Periodic solicitations for self-nominations to the committee will be advertised to further encourage participation.}
 
 \section{Membership Policy}
 
@@ -421,7 +426,7 @@ Four membership types and four status qualifiers are defined here. \\
 \begin{itemize}
 
 \item {\bf Senior Member:} 
-A Senior member of the Collaboration is a member who has a permanent appointment or an appointment, that under normal circumstances can be expected to be renewed indefinitely.  This includes tenure-track appointments at universities and their equivalents elsewhere.  
+A Senior member of the Collaboration is a member who has a permanent appointment or an appointment that, under normal circumstances, can be expected to be renewed indefinitely.  This includes tenure-track appointments at universities and their equivalents elsewhere.  
 
 \item {\bf Postdoctoral Member:} 
 A Postdoctoral researcher working with a Senior member at their institution can be designated as a Postdoctoral member by that Senior member. Postdoctoral researchers that are not working closely with a Senior member can apply to become an Independent Postdoctoral member. Postdoctoral membership is limited to the term of the appointment, after which the individual's membership must be renewed according to their new status.
@@ -443,7 +448,7 @@ The four status qualifiers are:
 This is the normal membership type, assumed unless otherwise specified in these bylaws.
 
 \item {\bf Provisional:} 
-New Senior, Postdoctoral and Student members will normally start with a Provisional status. This is intended to be a temporary status allowing the Provisional member to demonstrate sufficient constructive engagement with the Collaboration. New members who have already made substantive contributions to CMB-S4 may be deemed to have demonstrated sufficient engagement and be appointed as Full members. Provisional Postdoctoral and Student members who were designated as members by a Provisional Senior member may not be raised to Full status before that Senior member.
+New Senior, Postdoctoral and Student members will normally start with a Provisional status. This is intended to be a temporary status allowing the Provisional member to demonstrate sufficient constructive engagement with the Collaboration. New members who have already made substantive contributions to CMB-S4 may be deemed to have demonstrated sufficient engagement and be appointed as Full members. \sout{Provisional Postdoctoral and Student members who were designated as members by a Provisional Senior member may not be raised to Full status before that Senior member.}
 
 \item {\bf Pending:} 
 Postdoctoral and Student members whose membership term has expired, but whose membership has not yet been renewed, will be moved into Pending status. If the renewal would involve a change of membership type (from Student to Postdoctoral or Senior, or from Postdoctoral to Senior) then this status will afford them the intersection of the rights of the old and new membership types.
@@ -471,7 +476,7 @@ Herein, ``members'' refers to Senior, Postdoctoral and Student members (but not 
 
 \subsection{Membership Requirements}
 
-Members must commit effort to approved infrastructure tasks. The Membership Committee will work with the \exec\ to define and recommend infrastructure tasks that need filling, and to define and communicate with members the level of expected effort. Tasks can include, for example, designing, building, and testing hardware and software; generating or analysing simulations; developing science requirements and associated theoretical studies; contributing to commissioning and observations; and management tasks. Just as for the Project hardware and software, we anticipate having Collaboration requirements on the analysis software; members are expected to comply with interface, documentation and code review requirements in support of the goals of the Collaboration. Other ways of contributing include taking on roles in the governance, including membership on the GB, EVC, ET, or the Councils and Committees described in \S\ref{sec:councils}.
+Members must commit effort to approved infrastructure tasks. The Membership Committee will work with the \exec\ to define and recommend infrastructure tasks that need filling, and to define and communicate with members the level of expected effort. Tasks can include, for example, designing, building, and testing hardware and software; generating or analyzing simulations; developing science requirements and associated theoretical studies; contributing to commissioning and observations; and management tasks. Just as for the Project hardware and software, we anticipate having Collaboration requirements on the analysis software; members are expected to comply with interface, documentation and code review requirements in support of the goals of the Collaboration. Other ways of contributing include taking on roles in the governance, including membership on the GB, EVC, ET, or the Councils and Committees described in \S\ref{sec:councils}.
 
 \subsection{Membership Application and Approval Process}
 
@@ -493,13 +498,13 @@ The membership status of each member will be reviewed by the Membership Committe
 
 \begin{itemize} 
 
-\item Each Senior member and each Independent postdoc will submit an annual activity report to the Membership Committee. Senior members should include discussion of the activities of their Postdoctoral and Student member supervisees in their report. The Membership Committee will review these reports, consulting with Collaboration members and Working Group leaders as appropriate.
+\item Each Senior member and each Independent postdoc will submit an Annual Activity Report to the Membership Committee. Senior members should include discussion of the activities of their Postdoctoral and Student member supervisees in their report. The Membership Committee will review these reports, consulting with Collaboration members and Working Group leaders as appropriate.
   
-\item The Annual Activity Reports will be used by the Membership Committee to determine whether to recommend changing any Provisional member's status to Full or Inactive, or leaving it as Provisional for another year. Such recommendations will then be sent to the Governing Board for its approval.
+\item The Annual Activity Reports will be used by the Membership Committee to determine: whether to recommend changing any Provisional member's status to Full or Inactive, or leaving it as Provisional for another year; \textcolor{magenta}{whether to recommend changing any Full member's status to Inactive if the level of engagement is deemed insufficient.} Such recommendations will then be sent to the Governing Board for its approval.
 
 \item When a person's membership in the Collaboration ends, they will no longer have access to the \collabname\ document and database repository, internal forums, computing resources and data.  Authorship rights will continue, or not, as prescribed in the Publication Policy bylaws. 
 
-\item in exceptional circumstances members  leaving the Collaboration who have made especially notable contributions to the Project and/or Collaboration may be granted Legacy Membership upon review by the Membership Committee and approval by the Governing Board.
+\item in Exceptional Circumstances members leaving the Collaboration who have made especially notable contributions to the Project and/or Collaboration may be granted Legacy Membership upon review by the Membership Committee and approval by the Governing Board.
 
 \item \textcolor{magenta}{Procedures that could lead to loss of Membership for strong or persistent violations of the \collabname\ Code of Conduct are described in that document.}
 
