Revert "Merge branch 'master' of https://github.com/CMB-S4/Governance"
Updating bylaws with CoC amendment pulled out

--- a/bylaws_v1.78910.tex
+++ b/bylaws_v1.78910.tex
@@ -67,8 +67,8 @@
 1.4 & Amendments to Section 6, 6.3 on GB elections, deletion of Appendix A (First election procedures) & 03/06/2020 & 04/20/2020 \\ \hline
 1.5 & Amendments to Section 9 regarding the speakers and publication policies & 03/06/2020 & 02/05/2021 \\ \hline
 1.6 & Amendments to S8.4 for the transition from Postdoctoral to Senior membership, revises``Intended Senior Membership Status" & 01/21/2021 & \\ \hline
-1.7 & \textcolor{green}{Amendments to Figure 1 and Section 5.2} & & \\ \hline
-1.8 & \textcolor{red}{Amendments to Sections 1.2, 5.1, 7, and 7.2 and Figure 1 to redefine Technical Working Groups, preserving the intent of unamended Sections 7.2, 9.2, and 9.3} & & \\ \hline
+1.7 & \textcolor{green}{Inclusion of relevant references to the Code of Conduct} & & \\ \hline
+1.8 & \textcolor{red}{Amendments to Figure 1 and Section 5.2, merged with 1.8 , Amendments to Sections 1.2, 5.1, 7, and 7.2 and Figure 1 to redefine Technical Working Groups, preserving the intent of unamended Sections 7.2, 9.2, and 9.3} & & \\ \hline
 1.9 & \textcolor{blue}{Amendments to Section 8 to clarify membership types, status qualifiers, and processes} & & \\ \hline
 1.10 & \textcolor{magenta}{Amendments to Sections 2,3.1,3.3,3.4,6.3,7.3-7.7,10.2 to address minor inconsistencies and extend GB attendance requirements to account for extenuating circumstances} & 09/15/2021 & \\ \hline
 & & &\\ \hline
@@ -108,7 +108,7 @@ This document outlines the Collaboration governance and organization of scientif
 
 \item Towards this end, the Collaboration should provide appropriate credit to data analysts and builders of hardware and/or software; provide leadership opportunities and other opportunities to promote career advancement; motivate people to work together towards common goals; and provide a healthy collaboration culture that establishes standards for behavior consistent with high ethical standards.
 
-\item \textcolor{magenta}{All members will be expected to abide by the \collabname\ Code of Conduct.} \textbf{Comment: This is going to be included in the bylwas as soon as the CoC is in place}
+\item \textcolor{green}{All members will be expected to abide by the \collabname\ Code of Conduct.} 
 
 \end{itemize}
 
@@ -126,7 +126,7 @@ The governance structure of the \collabname\ Collaboration is illustrated in Fig
 \begin{center}
 \includegraphics[width=6.5in]{cmbs4_org_v11.pdf}
 \end{center}
-\caption{\collabname\ Collaboration Organizational Chart. \textcolor{magenta}{EDI to be added to the chart.}}
+\caption{\collabname\ Collaboration Organizational Chart. }
 \label{fig:org_chart}
 \end{figure}
 
@@ -145,7 +145,8 @@ Any powers not explicitly assigned to a different governing body in these Bylaws
 
 \item Approval and revision of Collaboration Bylaws, including the Membership and Publication and Speakers policies. The currently ratified version of the Bylaws must be available on a public website. Amendment of the Bylaws requires a supermajority of the GB.  Major changes (see \S\ref{sec:amend}) must be ratified by the \textcolor{magenta}{majority of the} Voting members of the Collaboration.
 
-\item Formal acceptance of new Collaboration members, and resolution of membership conflicts/issues, such as the removal of members from the Collaboration \textcolor{magenta}{for failure to perform their duties or serious violations of the Code of Conduct}. The change in status of a member (including acceptance or removal) requires approval by a supermajority of the GB.
+\item Formal acceptance of new Collaboration members, and resolution of membership conflicts/issues, such as the removal of members from the Collaboration \textcolor{green}{for failure to perform their duties or serious violations of the Code of Conduct}. 
+The change in status of a member (including acceptance or removal) requires approval by a supermajority of the GB.
 
 \item Organization of elections for Spokespersons, GB members, and other elected Collaboration officials (see \S\ref{sec:elections}).  
 
@@ -219,7 +220,7 @@ The \exec \ has three main roles:
 
 \subsection{\exec \ Meetings}
 
-The Spokespersons will chair the meetings, provide the agendas, and establish rules for the \shorte\ meetings. The first meeting will be held no later than two weeks after the election of the Spokespersons and the Council and Committee Chairs. It is expected that the \shorte\ will meet no less than twice a month to ensure adequate attention to its duties. Meetings can be called on the initiative of a Spokesperson or at the request of an \shorte\ member, provided that a Spokesperson agrees.\\ \sout{\textcolor{green}{Minutes that summarize the ET meetings will be distributed to the Collaboration.}} \\
+The Spokespersons will chair the meetings, provide the agendas, and establish rules for the \shorte\ meetings. The first meeting will be held no later than two weeks after the election of the Spokespersons and the Council and Committee Chairs. It is expected that the \shorte\ will meet no less than twice a month to ensure adequate attention to its duties. Meetings can be called on the initiative of a Spokesperson or at the request of an \shorte\ member, provided that a Spokesperson agrees.\\ \sout{\textcolor{red}{Minutes that summarize the ET meetings will be distributed to the Collaboration.}} \\
 Each meeting requires a quorum to conduct official \shorte\ business.  It is the expectation that \shorte\ members participate in the majority of meetings; \shorte\ members who fail to participate in a majority of meetings over a one-year period will be replaced in the nearest election cycle and barred from the \shorte\ for a two-year term.  
 
 \section{Elections}\label{sec:elections}
@@ -448,7 +449,7 @@ The four status qualifiers are:
 This is the normal membership type, assumed unless otherwise specified in these bylaws.
 
 \item {\bf Provisional:} 
-New Senior, Postdoctoral and Student members will normally start with a Provisional status. This is intended to be a temporary status allowing the Provisional member to demonstrate sufficient constructive engagement with the Collaboration. New members who have already made substantive contributions to CMB-S4 may be deemed to have demonstrated sufficient engagement and be appointed as Full members. \sout{Provisional Postdoctoral and Student members who were designated as members by a Provisional Senior member may not be raised to Full status before that Senior member.}
+New Senior, Postdoctoral and Student members will normally start with a Provisional status. This is intended to be a temporary status allowing the Provisional member to demonstrate sufficient constructive engagement with the Collaboration. New members who have already made substantive contributions to CMB-S4 may be deemed to have demonstrated sufficient engagement and be appointed as Full members. %\sout{Provisional Postdoctoral and Student members who were designated as members by a Provisional Senior member may not be raised to Full status before that Senior member.}
 
 \item {\bf Pending:} 
 Postdoctoral and Student members whose membership term has expired, but whose membership has not yet been renewed, will be moved into Pending status. If the renewal would involve a change of membership type (from Student to Postdoctoral or Senior, or from Postdoctoral to Senior) then this status will afford them the intersection of the rights of the old and new membership types.
@@ -504,9 +505,9 @@ The membership status of each member will be reviewed by the Membership Committe
 
 \item When a person's membership in the Collaboration ends, they will no longer have access to the \collabname\ document and database repository, internal forums, computing resources and data.  Authorship rights will continue, or not, as prescribed in the Publication Policy bylaws. 
 
-\item in Exceptional Circumstances members leaving the Collaboration who have made especially notable contributions to the Project and/or Collaboration may be granted Legacy Membership upon review by the Membership Committee and approval by the Governing Board.
+\item In Exceptional Circumstances members leaving the Collaboration who have made especially notable contributions to the Project and/or Collaboration may be granted Legacy Membership upon review by the Membership Committee and approval by the Governing Board.
 
-\item \textcolor{magenta}{Procedures that could lead to loss of Membership for strong or persistent violations of the \collabname\ Code of Conduct are described in that document.}
+\item \textcolor{green}{Procedures that could lead to loss of Membership for strong or persistent violations of the \collabname\ Code of Conduct are described in that document.}
 
 \end{itemize}
 
