--- a/bylaws_v1.78910.tex
+++ b/bylaws_v1.78910.tex
@@ -52,7 +52,7 @@
 
 \newpage
 
-\begin{table}[h]
+\begin{table}[h!]
 %\caption{Version Control Table.  The version number is given as $X$.$Y$, where major amendments are indicated with  increments to $X$, while minor ones increment $Y$. }
 \begin{center}
 \begin{tabular}{| l | p{3.7in} | c | c |}
