--- a/bylaws_v1.78910.tex
+++ b/bylaws_v1.78910.tex
@@ -209,7 +209,7 @@ Spokespersons are elected to two-year terms \textcolor{magenta}{and are limited 
 
 \subsection{Scope}
 
-The \exec \ (\shorte) is an elected and appointed board led by the Spokespersons. It consists of up to {\textcolor{red}{10} members: the Spokespersons, the co-Chairs of the Science Council, \sout{{\textcolor{red}{the two co-Chairs of the Technical Council,}}} the Chair of the Membership Committee, the Chair of the Publication and Speakers Committee, \textcolor{magenta}{the two co-Chairs of the Education, Diversity and Inclusion Committee} and up to two members appointed by the Spokespersons. The ET is the agile decision-making body in the Collaboration with the ability to address the day-to-day collaboration issues.  The \shorte\ is structured to facilitate the flow of information to the Spokespersons from the Collaboration and vice versa, as well as to provide a sounding board for the Spokespersons.
+The \exec \ (\shorte) is an elected and appointed board led by the Spokespersons. It consists of up to {\textcolor{red}{10} members: the Spokespersons, the co-Chairs of the Science Council, \sout{{\textcolor{red}{the two co-Chairs of the Technical Council,}}} the Chair of the Membership Committee, the Chair of the Publication and Speakers Committee, \textcolor{magenta}{the two co-Chairs of the Equity, Diversity and Inclusion Committee} and up to two members appointed by the Spokespersons. The ET is the agile decision-making body in the Collaboration with the ability to address the day-to-day collaboration issues.  The \shorte\ is structured to facilitate the flow of information to the Spokespersons from the Collaboration and vice versa, as well as to provide a sounding board for the Spokespersons.
 
 The \exec \ has three main roles:
 \begin{itemize}
@@ -220,7 +220,7 @@ The \exec \ has three main roles:
 
 \subsection{\exec \ Meetings}
 
-The Spokespersons will chair the meetings, provide the agendas, and establish rules for the \shorte\ meetings. The first meeting will be held no later than two weeks after the election of the Spokespersons and the Council and Committee Chairs. It is expected that the \shorte\ will meet no less than twice a month to ensure adequate attention to its duties. Meetings can be called on the initiative of a Spokesperson or at the request of an \shorte\ member, provided that a Spokesperson agrees.\\ \sout{\textcolor{red}{Minutes that summarize the ET meetings will be distributed to the Collaboration.}} \\
+The Spokespersons will chair the meetings, provide the agendas, and establish rules for the \shorte\ meetings. The first meeting will be held no later than two weeks after the election of the Spokespersons and the Council and Committee Chairs. It is expected that the \shorte\ will meet no less than twice a month to ensure adequate attention to its duties. Meetings can be called on the initiative of a Spokesperson or at the request of an \shorte\ member, provided that a Spokesperson agrees. {\textcolor{red}{ET meeting agendas will be made available to the Collaboration.}} \\
 Each meeting requires a quorum to conduct official \shorte\ business.  It is the expectation that \shorte\ members participate in the majority of meetings; \shorte\ members who fail to participate in a majority of meetings over a one-year period will be replaced in the nearest election cycle and barred from the \shorte\ for a two-year term.  
 
 \section{Elections}\label{sec:elections}
