--- a/bylaws_v1.78910.tex
+++ b/bylaws_v1.78910.tex
@@ -359,7 +359,7 @@ Herein, ``Members'' refers to Senior, Postdoctoral, Student and Provisional Memb
 
 \item Members have full data access, including during the proprietary period for data that are eventually released.
 
-\item Members (including Legacy Members) have the right to be listed as a co-author on \collabname\ publications as specified in the Publication Policy.
+\item Members (including Legacy Members) have the right to be listed as a co-author on \collabname\ publications as specified in the Publication Policy (see section 9.4).
 
 \item Members have access to computational resources designated for \collabname, according to the policies of the relevant Computational Resources Working Group.
 
@@ -451,7 +451,9 @@ This is the normal membership type, assumed unless otherwise specified in these 
 New Senior, Postdoctoral and Student members will normally start with a Provisional status. This is intended to be a temporary status allowing the Provisional member to demonstrate sufficient constructive engagement with the Collaboration. New members who have already made substantive contributions to CMB-S4 may be deemed to have demonstrated sufficient engagement and be appointed as Full members. \sout{Provisional Postdoctoral and Student members who were designated as members by a Provisional Senior member may not be raised to Full status before that Senior member.}
 
 \item {\bf Pending:} 
-Postdoctoral and Student members whose membership term has expired, but whose membership has not yet been renewed, will be moved into Pending status. If the renewal would involve a change of membership type (from Student to Postdoctoral or Senior, or from Postdoctoral to Senior) then this status will afford them the intersection of the rights of the old and new membership types.
+Postdoctoral and Student members whose membership term has expired, but whose membership has not yet been renewed, will be moved into Pending status. 
+The expectation is that this status would apply for one year or less. 
+If the renewal would involve a change of membership type (from Student to Postdoctoral or Senior, or from Postdoctoral to Senior) then this status will afford them the intersection of the rights of the old and new membership types.
 
 \item {\bf Inactive:}
 Members who are deemed to be insufficiently engaged with the Collaboration, or who have failed to respond to requests for Annual Activity Reports or Membership Renewals in a timely manner, may be moved to Inactive status by the Membership Committee. A return to the member's prior status will be considered when the appropriate Annual Activity Report or Membership Renewal is submitted in writing to the Membership Committee. Inactive members retain their membership rights, but will typically be removed from the membership list, at the discretion of the Governing Board, after one year.
@@ -464,7 +466,7 @@ Herein, ``members'' refers to Senior, Postdoctoral and Student members (but not 
 
 \begin{itemize}
 
-\item Senior and Postdoctoral members are Voting members.  Voting members  have the right to vote to ratify Bylaws and amendments to Bylaws, and vote in elections for Spokespersons, Governing Board representatives, and the elected positions including the Chairs of the Science Council, and the Membership and Publication and Speakers Committees. 
+\item Non-provisional Senior and Postdoctoral members are Voting members.  Voting members have the right to vote to ratify Bylaws and amendments to Bylaws, and vote in elections for Spokespersons, Governing Board representatives, and the elected positions including the Chairs of the Science Council, and the Membership and Publication and Speakers Committees. 
 
 \item Members have full data access, including during the proprietary period for data that are eventually released.
 
